--- a/source/_posts/关于本站.md
+++ b/source/_posts/关于本站.md
@@ -3,4 +3,4 @@ title: 关于本站
 date: 2020-05-07 00:00:00
 tags: []
 ---
-本站是基于,hexo,搭建的静态博客，主题采用,next,，部署在,Github Page,，使用,travis,做ci工具。为了优化加载速度，对于生成的html、js、css使用,hexo-neat,进行压缩。使用,cloudflare,来做cdn加速。
+本站是基于[hexo](https://hexo.io/)搭建的静态博客，主题采用[next](https://github.com/theme-next/hexo-theme-next)，部署在[Github Page](https://github.com/lmikoto/lmikoto.github.io)，使用[travis](https://travis-ci.org/)做ci工具。为了优化加载速度，对于生成的html、js、css使用[hexo-neat](https://github.com/rozbo/hexo-neat)进行压缩。使用[cloudflare](https://www.cloudflare.com/)来做cdn加速。
