--- a/source/_posts/终于解决了吃饭问题.md
+++ b/source/_posts/终于解决了吃饭问题.md
@@ -18,7 +18,7 @@ categories: []
 接下来就是实现。
 技术栈采用 react + antd，加权随机采用扩展集合，使每一项出现的次数与其权重正相关，用均匀随机算法来从中选取的算法来解决，虽然这个算法耗费空间，但是对于这个场景来说足够了。
 界面
-![b3be7661-7877-4957-9fff-9ccf9c94ebbb.png](https://cdn.nlark.com/yuque/0/2020/png/328252/1601387936578-a7085974-d3c6-4d49-ae4d-9d900255595a.png#align=left&display=inline&height=1354&margin=%5Bobject%20Object%5D&name=b3be7661-7877-4957-9fff-9ccf9c94ebbb.png&originHeight=1354&originWidth=1084&size=80328&status=done&style=none&width=1084)
-![1562d972-4598-41ee-8a5d-8160a960fe69.png](https://cdn.nlark.com/yuque/0/2020/png/328252/1601387946304-ffcfc369-bc2b-4f6d-af6d-d6a797c63612.png#align=left&display=inline&height=348&margin=%5Bobject%20Object%5D&name=1562d972-4598-41ee-8a5d-8160a960fe69.png&originHeight=348&originWidth=858&size=30403&status=done&style=none&width=858)
+![b3be7661-7877-4957-9fff-9ccf9c94ebbb.png](/images/1601387936578-a7085974-d3c6-4d49-ae4d-9d900255595a.png)
+![1562d972-4598-41ee-8a5d-8160a960fe69.png](/images/1601387946304-ffcfc369-bc2b-4f6d-af6d-d6a797c63612.png)
 [项目访问链接](https://select.lmikoto.com/)
 [源代码](https://github.com/lmikoto/select)
