--- a/source/_posts/解决哈希冲突的办法.md
+++ b/source/_posts/解决哈希冲突的办法.md
@@ -20,7 +20,14 @@ categories: []
 
 #### 线性探查法
 
-线性探查法中 Di=1,2,3,4,5...
+![](/images/a1dec2be07c73a078b1fcd0d7ce70b62.svg)
 发生冲突时，顺序查看表中的下一个单元，直到找到空单元，或者遍历全表没找到。
 
-###
+#### 平方探查法
+
+![](/images/20752cdc978b3ca30e6708d1412ea9e4.svg)
+
+#### 伪随机探测再散列
+
+Di = 伪随机序列
+建立一个伪随机序列，比如(i + 10)%length
