--- a/source/_posts/解决哈希冲突的办法.md
+++ b/source/_posts/解决哈希冲突的办法.md
@@ -31,3 +31,15 @@ categories: []
 
 Di = 伪随机序列
 建立一个伪随机序列，比如(i + 10)%length
+
+### 链地址法
+
+将哈希值相同的元素放到一个链表中，java 的 HashMap 正式采用这种方式解决哈希冲突
+
+### 再哈希法
+
+同时构造多个不通的哈希函数，日过第一个发生冲突，就用第二个，直到不冲突或者哈希函数用完
+
+### 公共溢出区
+
+将哈希表分为公共表和溢出表，当溢出发生时，将所有溢出数据统一放到溢出区
